[project]
name = "aviation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.3",
]
docs = [
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-material>=9.6.15",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "N",
    "SIM",
    "T",
    "UP"
]

[tool.ruff.lint.per-file-ignores]
"analysis/*" = ["T201"]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"
